<resources>
    <string name="app_name">Is this a Poodle?</string>
    <string name="app_display_name">Dog Quiz</string>

    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_dismiss">Dismiss</string>
    <string name="button_ok">OK</string>

    <string name="title_game">Game</string>
    <string name="title_leaderboard">Leaderboard</string>
    <string name="title_instructions">Instructions</string>
    <string name="title_settings">Settings</string>

    <string name="game_spaniel_name">Inspect a Spaniel</string>
    <string name="game_hound_name">Know Thy Hound</string>
    <string name="game_terrier_name">Terrier Test</string>
    <string name="game_doggy_name">Doggy Digest</string>

    <string name="high_score_achieved_title">Congratulations!</string>
    <string name="high_score_achieved_description">You have achieved the highest score for this game.\n\nPlease enter your name for the record.</string>
    <string name="unknown_player">Anonymous</string>
    <string name="high_score_not_played">---</string>

    <string name="game_over_title">GAME OVER</string>

    <string name="instructions">1. Choose the game that you wish to play\n\n- Inspect a Spaniel\n- Know Thy Hound\n- Terrier Test\n- Doggy Digest\n\n2. You will be shown an image of a dog.\n\n3. Select the name of the breed of the dog.
    \n\n4. For each correct answer, you will gain a point.\n\n5. For each incorrect answer, you will loose a bone.\n\n6. Once 3 bones are lost, the game is over.\n\nTry to get the highest score!!</string>

    <string name="setting_category">Settings</string>
    <string name="setting_sounds">Sounds</string>
    <string name="setting_reset_scores">Reset Scores</string>
    <string name="setting_reset_scores_dialog_title">Reset Scores</string>
    <string name="setting_reset_scores_dialog_message">Are you sure that you want to reset all high scores?</string>

    <string name="settings_reset_scores_complete_title">High Scores</string>
    <string name="settings_reset_scores_complete_message">All High Scores have been reset!</string>

    <!-- Error message -->
    <string name="error_game_data_title">Something went wrong</string>
    <string name="error_game_data_message">An issue occurred when finding the dogs.</string>

    <string name="error_unexpected_title">Something went wrong</string>
    <string name="error_unexpected_message">An unexpected error has occurred. Please try again later.</string>

    <string name="error_lookup_network_title">Network Request Failed</string>
    <string name="error_lookup_network_message">Unable to find dogs.</string>
    <string name="error_lookup_network_message_with_code">Unable to find dogs due to %1$d</string>

    <string name="error_no_internet_title">Network Issue</string>
    <string name="error_no_internet_message">Please check your internet connection</string>
</resources>