<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_game_selection">

    <fragment
        android:id="@+id/navigation_game_selection"
        android:name="au.com.jayne.dogquiz.feature.selection.GameSelectionFragment"
        android:label="@string/title_game"
        tools:layout="@layout/game_selection_fragment" >
        <action
            android:id="@+id/startGame"
            app:destination="@id/game_fragment"
            app:enterAnim="@anim/slide_from_bottom"
            app:exitAnim="@anim/stay"
            app:popEnterAnim="@anim/stay"
            app:popExitAnim="@anim/slide_to_bottom"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_leaderboard"
        android:name="au.com.jayne.dogquiz.feature.score.ScoresFragment"
        android:label="@string/title_leaderboard"
        tools:layout="@layout/scores_fragment" />

    <fragment
        android:id="@+id/navigation_instructions"
        android:name="au.com.jayne.dogquiz.feature.help.InstructionsFragment"
        android:label="@string/title_instructions"
        tools:layout="@layout/instructions_fragment" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="au.com.jayne.dogquiz.feature.settings.SettingsFragment"
        android:label="@string/title_settings" />

    <fragment
        android:id="@+id/game_fragment"
        android:name="au.com.jayne.dogquiz.feature.game.GameFragment"
        android:label="@string/title_game"
        tools:layout="@layout/game_fragment" >
        <argument
            android:name="game"
            app:argType="au.com.jayne.dogquiz.domain.model.Game" />
    </fragment>
</navigation>