<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.dashboard.DashboardFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg_high_score"
        android:scaleType="centerCrop"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg_right_to_left_gradient"
        android:scaleType="centerCrop"
        />

    <TextView
        android:id="@+id/label_spaniel_quiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:textAlignment="textEnd"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:text="@string/game_spaniel_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/label_hound_quiz"
        />

    <TextView
        android:id="@+id/label_spaniel_leader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="Not played"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_spaniel_quiz"
        />

    <TextView
        android:id="@+id/label_hound_quiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:textAlignment="textEnd"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/game_hound_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_spaniel_quiz"
        app:layout_constraintBottom_toTopOf="@+id/label_terrier_quiz"
        />

    <TextView
        android:id="@+id/label_hound_leader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="Kate: 23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_hound_quiz"
        />

    <TextView
        android:id="@+id/label_terrier_quiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:textAlignment="textEnd"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/game_terrier_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_hound_quiz"
        app:layout_constraintBottom_toTopOf="@+id/label_doggy_quiz"
        />

    <TextView
        android:id="@+id/label_terrier_leader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="Kate: 23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_terrier_quiz"
        />

    <TextView
        android:id="@+id/label_doggy_quiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:textAlignment="textEnd"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/game_doggy_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_terrier_quiz"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:id="@+id/label_doggy_leader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="---"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_doggy_quiz"
        />

</androidx.constraintlayout.widget.ConstraintLayout>